--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ recursive-include docs *.png *.pod *.sh *.svg
 include *.md
 include *.txt
 include .flake8
+include .travis.yml
 include mypy.ini
 include pyproject.toml
 include tox.ini
