--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,10 @@
 envlist = check-manifest, lint, mypy, py36, py37, py38
 skip_missing_interpreters = True
 
+[travis]
+python =
+  3.7: check-manifest, lint, mypy, py37
+
 [testenv]
 deps =
     psycopg2-binary
