Add configuration files for black, flake8 and mypy
This essentially concerns new modules, to be added in forthcoming
commits, as we currently ignore all python files.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,6 @@ include docs/man/pg_activity.1
 recursive-include docs *.png *.pod *.sh *.svg
 include *.md
 include *.txt
+include .flake8
+include mypy.ini
+include pyproject.toml
