Implement the header() view and associated types
We introduce a "types" module holding data type definitions needed to
render the header of pg_activity.

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,5 @@
 [mypy]
 
-[mypy-blessed.*]
-ignore_missing_imports = True
-
 [mypy-setup]
 ignore_errors = True
 
@@ -14,3 +11,9 @@ ignore_errors = True
 
 [mypy-pgactivity.UI]
 ignore_errors = True
+
+[mypy-blessed.*]
+ignore_missing_imports = True
+
+[mypy-humanize.*]
+ignore_missing_imports = True
