Move pg_connect() into utils module and refactor it a bit
We'll reuse this function in another module of pgactivity package later
on, hence we need it in that package instead of in the main script.

Along the way, we simplify the logic using a for loop and we add type
annotations.

--- a/mypy.ini
+++ b/mypy.ini
@@ -17,3 +17,6 @@ ignore_missing_imports = True
 
 [mypy-humanize.*]
 ignore_missing_imports = True
+
+[mypy-psycopg2.*]
+ignore_missing_imports = True
