--- a/mypy.ini
+++ b/mypy.ini
@@ -18,5 +18,8 @@ ignore_missing_imports = True
 [mypy-humanize.*]
 ignore_missing_imports = True
 
+[mypy-psutil.*]
+ignore_missing_imports = True
+
 [mypy-psycopg2.*]
 ignore_missing_imports = True
