Add tests for update_processes_local
Test data was obtained from a live session of pg_activity in local mode.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 recursive-include *.py
 include docs/man/pg_activity.1
 recursive-include docs *.png *.pod *.sh *.svg
+recursive-include tests *.py *.json
 include *.md
 include *.txt
 include .flake8
