--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,9 @@ python =
 deps =
     psycopg2-binary
     pytest
+    pytest-datadir
 commands =
-    pytest --doctest-modules {toxinidir}/pgactivity {posargs:-vv}
+    pytest --doctest-modules {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
 
 [testenv:check-manifest]
 skip_install = True
