Set pytest options in configuration file

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     pytest
     pytest-datadir
 commands =
-    pytest --doctest-modules {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
+    pytest {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
 
 [testenv:check-manifest]
 skip_install = True
