Let black display the diff when run in tox

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ deps =
     black
     flake8
 commands =
-    black --check {toxinidir}
+    black --check --diff {toxinidir}
     flake8 {toxinidir}
 
 [testenv:mypy]
