--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 recursive-include *.py
 include docs/man/pg_activity.1
 recursive-include docs *.png *.pod *.sh *.svg
-recursive-include tests *.py *.json
+recursive-include tests *.py *.json *.txt
 include *.md
 include *.txt
 include .coveragerc
