--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps =
     psycopg2-binary
     pytest
     pytest-datadir
+    pytest-postgresql
 commands =
     pytest {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
 
