--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ recursive-include docs *.png *.pod *.sh *.svg
 recursive-include tests *.py *.json *.txt
 include *.md
 include *.txt
+include .editorconfig
 include .coveragerc
 include .flake8
 include .travis.yml
