Declare tests dependencies in a setuptools extra

--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,8 @@ python =
   3.7: check-manifest, lint, mypy, py37
 
 [testenv]
-deps =
-    psycopg2-binary
-    pytest
-    pytest-datadir
-    pytest-postgresql
+extras =
+    testing
 commands =
     pytest {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
 
