--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 recursive-include *.py
 include docs/man/pg_activity.1
+recursive-include pgactivity *.py *.sql
 recursive-include docs *.png *.pod *.sh *.svg
 recursive-include tests *.py *.json *.txt
 include *.md
