--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     flake8
 commands =
     black --check --diff {toxinidir}
-    flake8 {toxinidir}
+    flake8 {toxinidir} {toxinidir}/pg_activity
 
 [testenv:mypy]
 deps =
