Define pg_activity script as an entry point
We move pg_activity script as pgactivity/cli.py and transform the
__main__ section as a main() function. Then the 'script' keyword in
setup() is changed into an 'entry_points'+'console_scripts'; this is the
recommended way of shipping script and should fix the wrong shebang on
some systems.

--- a/tox.ini
+++ b/tox.ini
@@ -26,10 +26,10 @@ deps =
     flake8
 commands =
     black --check --diff {toxinidir}
-    flake8 {toxinidir} {toxinidir}/pg_activity
+    flake8 {toxinidir}
 
 [testenv:mypy]
 deps =
     mypy
 commands =
-    mypy pg_activity pgactivity
+    mypy pgactivity
