Use GH actions for CI
We drop Travis-CI configuration file as well as tox's section and
add github workflow definition files. Bonus point, we now check a nice
matrix of Python/PostgreSQL versions.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,8 +8,9 @@ include *.txt
 include .editorconfig
 include .coveragerc
 include .flake8
-include .travis.yml
 include mypy.ini
 include pyproject.toml
 include pytest.ini
 include tox.ini
+
+prune .github
