Add py39 to tox matrix

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = check-manifest, lint, mypy, py36, py37, py38
+envlist = check-manifest, lint, mypy, py36, py37, py38, py39
 skip_missing_interpreters = True
 
 [travis]
