Use Python 3.10 in CI
Also use string values in YAML to avoid 3.10 being read as 3.1.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - python: 3.6
-          - python: 3.7
-          - python: 3.8
-          - python: 3.9
-          - python: 3.10-dev
+          - python: "3.6"
+          - python: "3.7"
+          - python: "3.8"
+          - python: "3.9"
+          - python: "3.10"
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
