Run tests with lower bounds of dependencies [DO NOT MERGE]
This is implemented as a Pip constraints file, to be used during
installation as:

    pip install -e . -c constraints.txt

Unfortunately, I did not find the proper way to specify this in tox.ini,
hence the "deps" field now containing explicit installation of the
package.

--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,9 @@ envlist = check-manifest, lint, mypy, py36, py37, py38, py39
 skip_missing_interpreters = True
 
 [testenv]
-extras =
-    testing
+deps =
+    -e .[testing]
+    -c {toxinidir}/constraints.txt
 commands =
     pytest {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
 
