Add support for using Psycopg database driver
In addition to using psycopg2, we now support psycopg (3) as a database
driver. The "pg" module is extended to first try psycopg and eventually
fall back to using psycopg2 if the former is not available.

Due to the subtle differences between psycopg2 and psycopg 3, we
introduce a few compatibility functions.

For testing, we can force the use of psycopg2 by setting
_PGACTIVITY_USE_PSYCOPG2 environment variable. This is done in tox,
through the new -psycopg2 variant of pyX.Y environments and populated in
github workflow.

We add two setuptools "extras": psycopg2 and psycopg in order make
installation easier.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,13 @@ jobs:
       matrix:
         include:
           - python: "3.7"
+            psycopg: "psycopg2"
           - python: "3.8"
+            psycopg: "psycopg3"
           - python: "3.9"
+            psycopg: "psycopg2"
           - python: "3.10"
+            psycopg: "psycopg3"
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
@@ -25,4 +29,4 @@ jobs:
            sudo locale-gen fr_FR
            sudo update-locale
       - name: Test
-        run: tox -e py
+        run: tox -e py-${{ matrix.psycopg }}
