--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,16 @@
 [tox]
-envlist = check-manifest, lint, mypy, py{37,38,39,310}
+envlist = check-manifest, lint, mypy, py{37,38,39,310}-psycopg{2,3}
 skip_missing_interpreters = True
 
 [testenv]
 extras =
     testing
+    psycopg2: psycopg2
+    psycopg3: psycopg
 commands =
     pytest {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
+setenv =
+    psycopg2: _PGACTIVITY_USE_PSYCOPG2=1
 usedevelop = true
 
 [testenv:check-manifest]
