Update tox environments w.r.t. to support Python versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = check-manifest, lint, mypy, py36, py37, py38, py39
+envlist = check-manifest, lint, mypy, py{37,38,39,310}
 skip_missing_interpreters = True
 
 [testenv]
