--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ extras =
     testing
 commands =
     pytest {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
+usedevelop = true
 
 [testenv:check-manifest]
 skip_install = True
