--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ recursive-include tests *.py *.json *.txt
 include *.md
 include *.txt
 include .editorconfig
+include .codespellrc
 include .coveragerc
 include .flake8
 include mypy.ini
