--- a/tox.ini
+++ b/tox.ini
@@ -18,9 +18,11 @@ commands =
 [testenv:lint]
 skip_install = True
 deps =
+    codespell
     black
     flake8
 commands =
+    codespell {toxinidir}
     black --check --diff {toxinidir}
     flake8 {toxinidir}
 
