Reformat with black 23.1.0

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
 skip_install = True
 deps =
     codespell
-    black
+    black >= 23.1.0
     flake8
 commands =
     codespell {toxinidir}
