--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
         run: pip install tox
       - name: Check manifest
         run: tox -e check-manifest
-      - name: Lint (black & flake8)
+      - name: Lint
         run: tox -e lint
       - name: Mypy
         run: tox -e mypy
