--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,8 +18,7 @@ jobs:
         run: python -m pip install setuptools wheel twine
       - name: Build
         run: |
-          python setup.py check
-          python setup.py sdist bdist_wheel
+          python -m build
           python -m twine check dist/*
       - name: Publish
         run: python -m twine upload dist/*
