Fix a deprecation warning about accessing attr's version
Attrs version 23.1 deprecated attr.__version__ and recommends using
importlib.metadata. We do so for blessed as well to be consistent.

Unfortunately, importlib.metadata is only available from Python 3.8, so
we use importlib_metadata for Python 3.7.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "attrs >= 17, !=21.1",
     "blessed >= 1.15.0",
     "humanize >= 0.5.1",
+    "importlib_metadata; python_version < '3.8'",
     "psutil >= 2.0.0",
 ]
 
