--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,8 @@ commands =
     isort --check --diff {toxinidir}
 
 [testenv:mypy]
-deps =
-    mypy
+extras =
+    psycopg
+    typing
 commands =
     mypy
