--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install
-        run: python -m pip install setuptools wheel twine
+        run: python -m pip install build setuptools twine wheel
       - name: Build
         run: |
           python -m build
