--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,8 +79,8 @@ Homepage = "https://github.com/dalibo/pg_activity"
 [tool.setuptools.dynamic]
 version = { attr = "pgactivity.__version__" }
 
-[tool.setuptools.packages.find]
-where = ["."]
+[tool.setuptools]
+packages = ["pgactivity"]
 
 [tool.black]
 line-length = 88
