Let pytest report a full summary when invoked through tox
In particular, skipped tests (and the reason for skipping) are now shown
in the report.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ extras =
     psycopg2: psycopg2
     psycopg3: psycopg
 commands =
-    pytest {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv}
+    pytest {toxinidir}/pgactivity {toxinidir}/tests {posargs:-vv -ra}
 setenv =
     psycopg2: _PGACTIVITY_USE_PSYCOPG2=1
 usedevelop = true
