Add types-setuptools to 'typing' requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ typing = [
     "mypy",
     "types-psutil >= 5.9.5.15",
     "types-psycopg2",
+    "types-setuptools",
 ]
 psycopg = [
     "psycopg[binary]",
