Implement pg.needs_password() specifically for Psycopg 3.1+
Psycopg 3 links exceptions to the underlying libpq PGconn object, which
exposes a 'needs_password' property; exactly what we need and much more
robust than parsing the error message.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ typing = [
     "types-setuptools",
 ]
 psycopg = [
-    "psycopg[binary]",
+    "psycopg[binary] >= 3.1",
 ]
 psycopg2 = [
     "psycopg2-binary >= 2.8",
