Add a few builtin profiles
We add a "minimal", a "narrow" and a "wide" built-in profiles, shipped
with pg_activity distribution. The first two hide non-necessary columns in
the process table and the first also hides all header information. The
"wide" profile is simply the inverse of "narrow", and may be used to
switch from one's custom profile to something close to the default
behavior.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include docs/man/pg_activity.1
-recursive-include pgactivity *.py *.sql
+recursive-include pgactivity *.py *.sql *.conf
 recursive-include docs *.png *.pod *.sh *.svg
 recursive-include tests *.py *.json *.txt
 include *.md
