--- a/tox.ini
+++ b/tox.ini
@@ -27,11 +27,14 @@ deps =
     black >= 24.2.0
     flake8
     isort
+    pre-commit
+    pyupgrade
 commands =
     codespell {toxinidir}
     black --check --diff {toxinidir}
     flake8 {toxinidir}
     isort --check --diff {toxinidir}
+    pre-commit run --all-files --show-diff-on-failure pyupgrade
 
 [testenv:mypy]
 extras =
