--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ classifiers = [
 dependencies = [
     "attrs >= 17.4, !=21.1",
     "blessed >= 1.15.0",
-    "humanize >= 0.5.1",
+    "humanize >= 0.5.1, !=4.12.0",
     "psutil >= 2.0.0",
 ]
 
